clusters/proxmox-home/apps/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/component: namespace
