clusters/proxmox-home/apps/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng
    spec:
      enableServiceLinks: false
      containers:
        - name: searxng
          image: searxng/searxng:2026.6.13-e3d4fbe57
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: searxng-config
              mountPath: /etc/searxng
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
      volumes:
        - name: config-src
          configMap:
            name: searxng-config
        - name: searxng-config
          emptyDir: {}
