clusters/proxmox-home/apps/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - name: http
      port: 80
      targetPort: http
